--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,8 @@
+<!-- <p>
+  about works! {{ id }}
+</p> -->
+
 <p>
-  about works!
+  <a style="cursor: pointer" (click)="sendMeHome()"><strong>Go home</strong></a>
 </p>
+  
