--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <ul>
   <li><a routerLink="">Home</a></li>
-  <li><a routerLink="about">About</a></li>
+  <li><a routerLink="about/{{id}}">About</a></li>
 </ul>
 
-<app-home></app-home>
+<!-- <app-home></app-home> -->
 <!-- <app-about></app-about> -->
 
 <router-outlet></router-outlet>
