--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,25 +1,1 @@
-<div class="container color-dark">
-  <div class="col">
-    <p>Add a bucket list item</p>
-  </div>
-  <div class="col">
-    <p>Your bucket list ({{ itemCount }})</p>
-  </div>
-</div>
-
-<div class="container color-light">
-  <div class="col">
-    <p class="sm">Use this form below to add a new bucket list goal.</p>
-    <form>
-      <input type="text" class="txt" name="item" placeholder="Life goal.." [(ngModel)]="goalText">
-      <input type="submit" class="btn" [value]="btnText" (click)="addGoal()">
-      <input type="submit" class="btn" value="Clear" (click)="clear()">
-    </form>
-  </div>
-  <div class="col" [@goals]="goals.length">
-    <p class="life-container" *ngFor="let goal of goals; let i = index" (click)="removeGoal(i)">
-     {{ goal }}
-    </p>
-  </div>
-</div>
-<app-child [inputGoal]="goalText" (outputGoal)="showNewGoal($event)"></app-child>
+<h3>Welcome! I'm Home :)</h3>
