--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <ul>
   <li><a routerLink="">Home</a></li>
-  <li><a routerLink="my-goals/{{id}}">My Goals</a></li>
-  <li><a routerLink="my-goals/{{id}}/details">Details</a></li>
+  <li><a routerLink="my-goals">My Goals</a></li>
 </ul>
 
 <router-outlet></router-outlet>
