--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <ul>
-  <li><a routerLink="">Home</a></li>
-  <li><a routerLink="goals">Goals</a></li>
+  <li>
+    <a routerLink="">Home</a>
+  </li>
+  <li>
+    <a routerLink="goals">Goals</a>
+  </li>
 </ul>
-
+<hr>
 <router-outlet></router-outlet>
