--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<h1>Angular Unit Test</h1>
 <ul>
   <li>
     <a routerLink="">Home</a>
